# folder-syncer

./: .gitignore  LICENSE  README.md  log  main.py  pyproject.toml  testing.7z
.github/workflows/: python-app.yml
